<resources>
    <string name="app_name">InfinityArchitecture</string>
    <string name="def_url_img">https://media.istockphoto.com/photos/mountain-landscape-ponta-delgada-island-azores-picture-id944812540?k=20&amp;m=944812540&amp;s=612x612&amp;w=0&amp;h=U3sC5L6ZJY2oHC33eixu4CcB15JsgKl0Wnhtcpf_p40=</string>
    <string name="hey_you_clicked_me">Hey you clicked me!</string>
    <string name="dl_clicked">Drawable left clicked!</string>
    <string name="dr_clicked">Drawable right clicked!</string>
    <string name="dt_clicked">Drawable top clicked!</string>
    <string name="db_clicked">Drawable bottom clicked!</string>
    <string name="cv_title">Infinity Views</string>
    <string name="cv_title_infinity_button">Infinity Button</string>
    <string name="cv_title_infinity_image_button">Infinity Image Button</string>
    <string name="cv_title_infinity_image_view">Infinity Image View</string>
    <string name="cv_title_infinity_edit_text">Infinity Edit Text</string>
    <string name="cv_title_infinity_text_input_edit_text">Infinity Text Input Edit Text</string>
    <string name="btnimgv_content_desc_1">Image btn 1</string>
    <string name="btnimgv_content_desc_2">Image btn 2</string>
    <string name="btnimgv_content_desc_3">Image btn 3</string>
    <string name="btnimgv_content_desc_4">Image btn 4</string>
    <string name="btnimgv_content_desc_5">Image btn 5</string>
    <string name="btnimgv_content_desc_6">Image btn 6</string>
    <string name="btnimgv_content_desc_7">Image btn 7</string>
    <string name="btnimgv_content_desc_8">Image btn 8</string>
    <string name="btnimgv_content_desc_9">Image btn 9</string>
    <string name="btnimgv_content_desc_10">Image btn 10</string>
    <string name="btnimgv_content_desc_11">Image btn 11</string>
    <string name="btnimgv_content_desc_12">Image btn 12</string>
    <string name="btnimgv_content_desc_13">Image btn 13</string>
    <string name="btnimgv_content_desc_14">Image btn 14</string>
    <string name="btnimgv_desc_1">Click me 2 times fast - Click Throttle event listener block click until 2s</string>
    <string name="btnimgv_desc_2">Default Theme Button</string>
    <string name="btnimgv_desc_3">Dark Bg Color - Has light ripple effect</string>
    <string name="btnimgv_desc_4">Light Bg Color - Has dark ripple effect</string>
    <string name="btnimgv_desc_5">Single Border Radius</string>
    <string name="btnimgv_desc_6">All Border Radius</string>
    <string name="btnimgv_desc_7">Bordered Button</string>
    <string name="btnimgv_desc_8">Bordered Button - Custom Border Color</string>
    <string name="btnimgv_desc_9">Bordered Button - Single Border Radius</string>
    <string name="btnimgv_desc_10">Bordered Button - All Border Radius</string>
    <string name="btnimgv_desc_11">Bordered Button - Border Color And Background Color</string>
    <string name="btnimgv_desc_12">Button - Oval Shape</string>
    <string name="btnimgv_desc_13">Button - Oval Shape With Same Width And Height Creates A Circle</string>
    <string name="btnimgv_desc_14">Button - Image from a url using Glide Lib</string>
    <string name="btn_desc_1">Click me 2 times fast - Click Throttle event listener block click until 2s</string>
    <string name="btn_desc_2">Default Theme Button</string>
    <string name="btn_desc_3">Dark Bg Color - Has light ripple effect</string>
    <string name="btn_desc_4">Light Bg Color - Has dark ripple effect</string>
    <string name="btn_desc_5">Single Border Radius</string>
    <string name="btn_desc_6">All Border Radius</string>
    <string name="btn_desc_7">Bordered Button</string>
    <string name="btn_desc_8">Bordered Button - Custom Border Color</string>
    <string name="btn_desc_9">Bordered Button - Single Border Radius</string>
    <string name="btn_desc_10">Bordered Button - All Border Radius</string>
    <string name="btn_desc_11">Bordered Button - Border Color And Background Color</string>
    <string name="btn_desc_12">Button - Drawable Top</string>
    <string name="btn_desc_13">Button - Drawable Start</string>
    <string name="btn_desc_14">Button - Oval Shape</string>
    <string name="btn_desc_15">Button - Oval Shape With Same Width And Height Creates A Circle</string>
    <string name="imgv_content_desc_1">Image 1</string>
    <string name="imgv_content_desc_2">Image 2</string>
    <string name="imgv_content_desc_3">Image 3</string>
    <string name="imgv_content_desc_4">Image 4</string>
    <string name="imgv_content_desc_5">Image 5</string>
    <string name="imgv_content_desc_6">Image 6</string>
    <string name="imgv_content_desc_7">Image 7</string>
    <string name="imgv_content_desc_8">Image 8</string>
    <string name="imgv_content_desc_9">Image 9</string>
    <string name="imgv_content_desc_10">Image 10</string>
    <string name="imgv_content_desc_11">Image 11</string>
    <string name="imgv_desc_1">Drawable image</string>
    <string name="imgv_desc_2">Url image using Picasso Library</string>
    <string name="imgv_desc_3">Blur image using a overlap color, the color overlaps in front the image like a filter</string>
    <string name="imgv_desc_4">Blur image using a defocus</string>
    <string name="imgv_desc_5">Blur overlap color + defocus + src_center_crop</string>
    <string name="imgv_desc_6">Disabled src transition</string>
    <string name="imgv_desc_7">Transition 2 secconds</string>
    <string name="imgv_desc_8">Src all border radius</string>
    <string name="imgv_desc_9">Src single border radius</string>
    <string name="imgv_desc_10">Image with background color and all border radius</string>
    <string name="imgv_desc_11">Image with background color and single border radius</string>
    <string name="edittxt_desc_1">Default theme customization</string>
    <string name="edittxt_desc_1_2">Default theme customization filled</string>
    <string name="edittxt_desc_1_3">Default theme customization filled dense</string>
    <string name="edittxt_desc_1_4">Default theme customization outlined</string>
    <string name="edittxt_desc_1_5">Default theme customization outlined dense</string>
    <string name="edittxt_desc_1_6">Default theme customization none</string>
    <string name="edittxt_desc_1_7">Default theme customization none dense</string>
    <string name="edittxt_desc_2">Monetary format</string>
    <string name="edittxt_desc_3">Cellphone format</string>
    <string name="edittxt_desc_4">Custom border</string>
    <string name="edittxt_desc_5">Custom border width focus</string>
    <string name="edittxt_desc_6">Custom border color</string>
    <string name="edittxt_desc_7">Custom border color focus</string>
    <string name="edittxt_desc_8">Custom border radius</string>
    <string name="edittxt_desc_9">Custom border radius focused</string>
    <string name="edittxt_desc_10">Custom corners border radius</string>
    <string name="edittxt_desc_11">Custom corners border radius focused</string>
    <string name="edittxt_desc_12">Custom background color</string>
    <string name="edittxt_desc_13">Custom background color focused</string>
    <string name="edittxt_desc_14">Custom background color radius</string>
    <string name="edittxt_desc_15">Custom background color radius focused</string>
    <string name="edittxt_desc_16">Custom background color corners radius</string>
    <string name="edittxt_desc_17">Custom background color corners radius focused</string>
    <string name="edittxt_desc_18">Password toggle enabled</string>
    <string name="edittxt_desc_19">Drawable left clickable</string>
    <string name="edittxt_desc_20">Drawable right clickable</string>
    <string name="edittxt_desc_21">Drawable start clickable</string>
    <string name="edittxt_desc_22">Drawable end clickable</string>
    <string name="edittxt_desc_23">Drawable top clickable</string>
    <string name="edittxt_desc_24">Drawable bottom clickable</string>
</resources>